[gd_scene load_steps=11 format=3 uid="uid://ccxui30cwk2ah"]

[ext_resource type="Texture2D" uid="uid://bq3jr2f7oit5w" path="res://assets/mightyena.png" id="1_2vy12"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/master.gd" id="2_3kw1j"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/state_manager.gd" id="3_ajeio"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/state_enter_route.gd" id="4_afply"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/state_leave_route.gd" id="5_sbwe7"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/state_generate_pokemon.gd" id="6_dbgjm"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/state_combat.gd" id="7_wrf0t"]
[ext_resource type="Script" path="res://scenes/user_interface/views/main_view/state_capture.gd" id="8_1p4fe"]
[ext_resource type="Texture2D" uid="uid://dgrlry1ooo4yi" path="res://assets/pokeball.png" id="9_0crum"]

[sub_resource type="GDScript" id="GDScript_80h4q"]
resource_name = "attack_label"
script/source = "extends Label


func _ready() -> void:
	_update_text()
	ManagerDamage.ref.attack_updated.connect(_on_attack_update)


func _update_text() -> void:
	var _text : String = \"Attack : %s\" %ManagerDamage.ref.attack
	
	text = _text


func _on_attack_update() -> void:
	_update_text()
"

[node name="MainView" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBorder" type="Control" parent="."]
custom_minimum_size = Vector2(640, 80)
layout_mode = 2

[node name="ReferenceRect" type="ReferenceRect" parent="TopBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PokemonLabel" type="Label" parent="TopBorder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "Pok√©mon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CentralPart" type="Control" parent="."]
custom_minimum_size = Vector2(640, 320)
layout_mode = 2

[node name="ReferenceRect" type="ReferenceRect" parent="CentralPart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CentralPart"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(160, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2vy12")
expand_mode = 4

[node name="TextureButton" type="TextureButton" parent="CentralPart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CentralPart"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attack" type="Label" parent="CentralPart/VBoxContainer"]
layout_mode = 2
text = "Attack : 1"
script = SubResource("GDScript_80h4q")

[node name="ClickAttack" type="Label" parent="CentralPart/VBoxContainer"]
layout_mode = 2
text = "Click Attack : 1"

[node name="MarginContainer" type="MarginContainer" parent="CentralPart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ShouldCaptureButton" type="CheckButton" parent="CentralPart/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="BottomBorder" type="Control" parent="."]
custom_minimum_size = Vector2(640, 80)
layout_mode = 2

[node name="ReferenceRect" type="ReferenceRect" parent="BottomBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 24

[node name="ProgressBar" type="ProgressBar" parent="BottomBorder/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBorder/MarginContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftHp" type="Label" parent="BottomBorder/MarginContainer/ProgressBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "12"
horizontal_alignment = 2

[node name="MiddleHp" type="Label" parent="BottomBorder/MarginContainer/ProgressBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "/"

[node name="RightHp" type="Label" parent="BottomBorder/MarginContainer/ProgressBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "12"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Scripts" type="Node" parent="."]

[node name="Master" type="Node" parent="Scripts" node_paths=PackedStringArray("progress_bar")]
script = ExtResource("2_3kw1j")
progress_bar = NodePath("../../BottomBorder/MarginContainer/ProgressBar")

[node name="StateManager" type="Node" parent="Scripts" node_paths=PackedStringArray("enter_route_state", "leave_route_state", "generate_pokemon_state", "combat_state", "capture_state")]
script = ExtResource("3_ajeio")
enter_route_state = NodePath("EnterRoute")
leave_route_state = NodePath("LeaveRoute")
generate_pokemon_state = NodePath("GeneratePokemon")
combat_state = NodePath("Combat")
capture_state = NodePath("Capture")

[node name="EnterRoute" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("master", "state_manager")]
script = ExtResource("4_afply")
master = NodePath("../../Master")
state_manager = NodePath("..")

[node name="LeaveRoute" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("master", "state_manager")]
script = ExtResource("5_sbwe7")
master = NodePath("../../Master")
state_manager = NodePath("..")

[node name="GeneratePokemon" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("master", "state_manager")]
script = ExtResource("6_dbgjm")
master = NodePath("../../Master")
state_manager = NodePath("..")

[node name="Combat" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("master", "state_manager", "combat_timer", "texture_button")]
script = ExtResource("7_wrf0t")
master = NodePath("../../Master")
state_manager = NodePath("..")
combat_timer = NodePath("CombatTimer")
texture_button = NodePath("../../../CentralPart/TextureButton")

[node name="CombatTimer" type="Timer" parent="Scripts/StateManager/Combat"]

[node name="Capture" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("master", "state_manager", "timer", "progress_bar")]
script = ExtResource("8_1p4fe")
master = NodePath("../../Master")
state_manager = NodePath("..")
timer = NodePath("CaptureTimer")
progress_bar = NodePath("../../../BottomBorder/MarginContainer/ProgressBar")
pokeball_texture = ExtResource("9_0crum")

[node name="CaptureTimer" type="Timer" parent="Scripts/StateManager/Capture"]

[connection signal="pressed" from="CentralPart/TextureButton" to="Scripts/StateManager/Combat" method="_on_texture_button_pressed"]
[connection signal="toggled" from="CentralPart/MarginContainer/ShouldCaptureButton" to="Scripts/Master" method="_on_should_capture_button_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Scripts/StateManager/Combat/CombatTimer" to="Scripts/StateManager/Combat" method="_on_combat_timer_timeout"]
[connection signal="timeout" from="Scripts/StateManager/Capture/CaptureTimer" to="Scripts/StateManager/Capture" method="_on_capture_timer_timeout"]
